# animatediff-cli-prompt-travel

./: README.md  setup.cfg
.github/workflows/: build.yml
src/animatediff/: cli.py  generate.py
src/animatediff/models/: clip.py
src/animatediff/pipelines/: animation.py  lora.py  pipeline_controlnet_img2img_reference.py
src/animatediff/utils/: convert_from_ckpt.py  device.py  util.py
