[metadata]
name = animatediff
author = Andi Powers-Holmes
email = aholmes@omnom.net
maintainer = Andi Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.10
packages = find:
package_dir =
    =src
py_modules =
    animatediff
include_package_data = True
install_requires =
    accelerate
    colorama
    cmake >= 3.25.0
    diffusers
    einops >= 0.6.1
    gdown >= 4.6.6
    ninja >= 1.11.0
    numpy
    omegaconf
    pillow 
    pydantic
    rich
    safetensors
    sentencepiece >= 0.1.99
    shellingham >= 1.5.0
    torch
    torch_xla
    torchaudio
    torchvision
    transformers
    typer
    controlnet_aux
    matplotlib
    ffmpeg-python >= 0.2.0
    mediapipe
    pandas

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >= 22.3.0
    ruff >= 0.0.234
    setuptools-scm >= 7.0.0
    pre-commit >= 3.3.0
    ipython
rife =
    ffmpeg-python >= 0.2.0
stylize =
    ffmpeg-python >= 0.2.0
    onnxruntime-gpu
    pandas
dwpose =
    onnxruntime-gpu
stylize_mask =
    ffmpeg-python >= 0.2.0
    pandas
    segment-anything-hq == 0.3
    groundingdino-py == 0.4.0
    gitpython
    rembg[gpu]
    onnxruntime-gpu

[options.entry_points]
console_scripts =
    animatediff = animatediff.cli:cli

[flake8]
max-line-length = 110
ignore =
    # these are annoying during development but should be enabled later
    F401 # module imported but unused
    F841 # local variable is assigned to but never used
    # black automatically fixes this
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv
